--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c",
+    "build": "svelte-check && rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --single=true",
     "ts-check": "svelte-check"
@@ -16,7 +16,7 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0",
+    "svelte": "^3.26.0",
     "svelte-check": "^1.0.47",
     "svelte-preprocess": "^4.3.0",
     "typescript": "^4.0.3"
